<resources>
  <string name="transition_name">transition_name</string>
  <string name="comments_example">33 Comments</string>
  <string name="user_name_example">Rick Sanchez @Rick</string>
  <string name="post_title_example">I hate to break it to you</string>
  <string name="post_body_example">Listen Morty, I hate to break it to you, but what people calls “love” is just a chemical reaction that compels animals to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did it. Your parents are gonna do it. Break the cycle, Morty. Rise above. Focus on science.</string>
  <string name="comment_image_content_description">Comment Image</string>
  <string name="users_avatar_content_description">Users Avatar</string>

  <string name="loading_comments">loading Comments</string>
  <plurals name="number_of_comments">
    <item quantity="one">%d comment</item>
    <item quantity="other">%d comments</item>
  </plurals>

  <string name="comment_missing_error">sorry we could not load the comments</string>
</resources>
