<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/detail_content"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:transitionName="@string/transition_name">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/detail_recycler"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/background_light"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_collapseMode="parallax">

        <ImageView
          android:id="@+id/detail_avatar"
          android:layout_width="64dp"
          android:layout_height="64dp"
          android:layout_marginTop="32dp"
          android:background="@android:color/darker_gray"
          android:contentDescription="@string/users_avatar_content_description"
          android:elevation="4dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

        <TextView
          android:id="@+id/detail_title"
          style="@style/TextAppearance.DetailPostTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:gravity="center"
          android:minLines="2"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_avatar"
          tools:text="@string/post_title_example"/>

        <TextView
          android:id="@+id/detail_user_name"
          style="@style/TextAppearance.DetailUserName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="16dp"
          android:gravity="center"

          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_title"
          tools:text="@string/user_name_example"/>

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/detail_body"
          style="@style/TextAppearance.DetailPostBody"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"

          android:layout_marginBottom="16dp"
          android:gravity="center_horizontal"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_user_name"
          tools:text="@string/post_body_example"
          />

        <ImageView
          android:id="@+id/detail_comment_image"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          android:contentDescription="@string/comment_image_content_description"
          android:src="@drawable/ic_mode_comment_black_24dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/detail_comment_text"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_body"/>

        <TextView
          android:id="@+id/detail_comment_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          app:layout_constraintBottom_toBottomOf="@id/detail_comment_image"
          app:layout_constraintStart_toEndOf="@+id/detail_comment_image"
          app:layout_constraintTop_toTopOf="@+id/detail_comment_image"
          tools:text="@string/comments_example"/>

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:titleTextColor="@android:color/white"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
